examples/1-28.js
const TAXRATE = .0825;
// TAXRATE = .0875; // This will generate an error
//Uncaught TypeError TypeError: Assignment to constant variable.

////////////////////

const TAXRATE; // This alone is an error
// SyntaxError: Identifier 'TAXRATE' has already been declared
